# mippp_nqueens

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  conanfile.py
jump/: n-queens.jl
patches/: python-mip-queens-warmup.patch
profiles/: gcc14_c++23  gcc15_c++26
results/: COPT_mippp.csv  COPT_mippp_bulk.csv  CPLEX_mippp.csv  CPLEX_mippp_bulk.csv  Cbc_mippp.csv  Cbc_mippp_bulk.csv  Cbc_or_tools.csv  Gurobi_c.csv  Gurobi_c_bulk.csv  Gurobi_mippp.csv  Gurobi_mippp_bulk.csv  Highs_mippp.csv  Highs_mippp_bulk.csv  Highs_or_tools.csv  MOSEK_mippp.csv  MOSEK_mippp_bulk.csv  SCIP_mippp.csv  SCIP_mippp_bulk.csv  SCIP_or_tools.csv
results/python-mip/: queens-gurobi-cpython.csv  queens-jump.csv  queens-mip-cbc-cpython.csv  queens-mip-cbc-pypy.csv  queens-mip-grb-cpython.csv  queens-mip-grb-pypy.csv  queens-pulp-cpython.csv  queens-pulp-pypy.csv
scripts/: benchmark.py  benchmark_gurobi.py  benchmark_gurobipy.py  benchmark_highspy.py  benchmark_jump.py  benchmark_mippp.py  benchmark_ortools.py  benchmark_pulp.py  benchmark_python-mip.py  benchmark_python.sh  helper.py  tables.py
scripts/tables/: gurobi_vs_mippp.py  helper.py  jump_vs_python.py  mippp_vs_or-tools.py  mippp_vs_others.py
src/: c.cpp  c_bulk.cpp  gurobi.py  gurobi_c.cpp  gurobi_c_bulk.cpp  highs.py  jump.jl  main.cpp  mippp.cpp  mippp_bulk.cpp  mippp_bulk_distinct.cpp  mippp_distinct.cpp  or_tools.cpp  pulp_.py  python-mip.py
